app_deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"blog-django-fiap:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"blog-django-fiap\")].image"}]
    openshift.io/generated-by: OpenShiftNewApp
  selfLink: /apis/apps/v1/namespaces/fiap-grupo5/deployments/blog-django-fiap
  name: blog-django-fiap
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: blog-django-fiap
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: blog-django-fiap
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: blog-django-fiap
          image: >-
            sebacs/blog-django-fiap@sha256:ec0149d51aac5db76abba4df956021c8d0f58b0e153160bd6b1eb8e967830bb5
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
