app_route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  selfLink: /apis/route.openshift.io/v1/namespaces/fiap-grupo5/routes/blog-django-fiap
  name: blog-django-fiap
  namespace: fiap-grupo5
  labels:
    app: blog-django-fiap
    app.kubernetes.io/component: blog-django-fiap
    app.kubernetes.io/instance: blog-django-fiap
spec:
  host: fase4-grupo5-fiap.apps.na46.prod.nextcle.com
  to:
    kind: Service
    name: blog-django-fiap
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
